# pacops

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  rust.yml
src/: chroot.rs  config.rs  context.rs  git.rs  main.rs  pkgbuild.rs  settings.rs  update.rs
src/source/: mod.rs
src/source/remote/: deb.rs  mod.rs
