[package]
name = "pacops"
description = "PKGBUILD maintainer Swiss Army knife"
documentation = "https://docs.rs/pacops"
version = "0.0.2"
authors = ["Vlad Petrov <ejiek@mail.ru>"]
edition = "2018"
keywords = ["pacman", "pkgbuild", "archlinux"]
categories = ["command-line-utilities", "development-tools::build-utils"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ejiek/pacops"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
config = "0.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
version-compare = "0.0.11"
select = "0.5.0"
regex = "1.4.3"
blake2 = "0.10.3"
sha-1 = "0.9.3"
sha2 = "0.9.3"
md-5 = "0.9.1"
tempfile = "3.2.0"
shellexpand = "2.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dirs = "3.0"
